<resources>
    <string name="app_name">Movie App Final</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_appbar_title">Login</string>
    <string name="email_edit_text_hint">Email</string>
    <string name="password_edit_text_hint">Password</string>
    <string name="btn_login_text">Login</string>
    <string name="register_with">or Register with</string>
    <string name="register_btn_text">Register</string>
    <string name="term_condition_register"><![CDATA[With the registration here, you agree to the Terms & Conditions as well as the Privacy Policy of TokoPhincon.]]></string>
    <string name="term_condition_login"><![CDATA[With the registration here, you agree to the Terms & Conditions as well as the Privacy Policy of TokoPhincon.]]></string>
    <string name="register_appbar_title">Register</string>
    <string name="example_email">Example: test@gmail.com</string>
    <string name="minimum_character">Minimum 8 characters.</string>
    <string name="log_in_with">or Log In with</string>
    <string name="onboarding_1_title">John Wick IV</string>
    <string name="onboarding_1_desc">John Wick uncovers a path to defeating The High Table. But before he can earn his freedom, Wick must face off against a new enemy with powerful alliances across the globe and forces that turn old friends into foes.</string>
    <string name="onboarding_2_title">The DUNE</string>
    <string name="onboarding_2_desc">A noble family becomes embroiled in a war for control over the galaxy\'s most valuable asset while its heir becomes troubled by visions of a dark future.</string>
    <string name="onboarding_3_title">Life</string>
    <string name="onboarding_3_desc">A team of scientists aboard the International Space Station discover a rapidly evolving life form that caused extinction on Mars and now threatens all life on Earth.</string>
    <string name="profile_title">Profile</string>
    <string name="cart_menu_title">Cart</string>
    <string name="my_token_title">My Token</string>
    <string name="setting_title">Setting</string>
    <string name="transaction_history_title">Transaction History</string>
    <string name="wishlist_title">Wishlist</string>
    <string name="search_title">Search</string>
    <string name="home_title">Home</string>
    <string name="action_drama_genre">Action . Drama</string>
    <string name="navigation_drawer_open">Buka Navigasi</string>
    <string name="navigation_drawer_close">Tutup Navigasi</string>
    <string name="logout">Logout</string>
    <string name="duration_minutes">%duration% minutes</string>
    <string name="doesnt_have_account">Belum memiliki akun? Daftar.</string>
    <string name="register_text">Daftar</string>
    <string name="name_hint">Name</string>
    <string name="finish_text">Finish</string>
    <string name="failed_to_add_profile_name">Gagal Menambahkan Nama Profile</string>
    <string name="register_failed">Gagal Register</string>
    <string name="already_have_account">Sudah memiliki akun? Masuk.</string>
    <string name="login_text">Masuk</string>
    <string name="detail_title">Detail</string>
    <string name="email_is_required">Email is required</string>
    <string name="password_is_required">Password is required</string>
    <string name="email_is_invalid">Email is invalid</string>
    <string name="password_is_invalid">Password is invalid</string>
    <string name="name_can_not_be_null">Name Can Not be Null</string>
    <string name="now_playing_title">Now Playing</string>
    <string name="popular_title">Popular</string>
    <string name="trending_title">Trending</string>
    <string name="movie_overview">Movie Overview</string>
    <string name="rent_now_btn">Rent Now</string>
    <string name="add_to_cart_btn">Add to Cart</string>
    <string name="cart_title">Cart</string>
    <string name="are_you_sure">Are You sure want to delete this item?</string>
    <string name="item_will_deleted">Item will deleted from Cart</string>
    <string name="cancel_btn_cart">Cancel</string>
    <string name="delete_btn_cart">Delete</string>
    <string name="successful_added_to_cart">Successful Added to Cart</string>
    <string name="delete_btn_text">Delete</string>
    <string name="en">EN</string>
    <string name="id">ID</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="theme_text">Theme</string>
    <string name="successful_added_to_wishlist">Success Added to Wishlist</string>
    <string name="success_delete_from_wishlist">Success Delete from Wishlist</string>
    <string name="total_items">%total% items</string>
    <string name="failed_to_get_data">Gagal Mendapatkan Data</string>
    <string name="balance_title">Balance</string>
    <string name="btn_continue">Continue</string>
    <string name="token_balance">Token Balance</string>
    <string name="action_genre">Action</string>
    <string name="adventure_genre">Adventure</string>
    <string name="animation_genre">Animation</string>
    <string name="comedy_genre">Comedy</string>
    <string name="crime_genre">Crime</string>
    <string name="documentary_genre">Documentary</string>
    <string name="drama_genre">Drama</string>
    <string name="family_genre">Family</string>
    <string name="fantasy_genre">Fantasy</string>
    <string name="history_genre">History</string>
    <string name="horror_genre">Horror</string>
    <string name="music_genre">Music</string>
    <string name="mystery_genre">Mystery</string>
    <string name="romance_genre">Romance</string>
    <string name="science_fiction_genre">Science Fiction</string>
    <string name="tv_movie_genre">TV Movie</string>
    <string name="thriller_genre">Thriller</string>
    <string name="war_genre">War</string>
    <string name="western_genre">Western</string>
    <string name="choose_payment">Choose Payment</string>
    <string name="language_setting">Language</string>
    <string name="delete_account_setting">Delete Account</string>
    <string name="delete_account_failed">Gagal Hapus Account</string>
    <string name="name_title_payment">Name :</string>
    <string name="payment_method_title">Payment Method :</string>
    <string name="total_price_title">Total Price :</string>
    <string name="check_out_title">Check Out</string>
    <string name="btn_buy">Buy</string>
    <string name="total_payment_title">Total Bayar</string>
    <string name="data_con_not_be_null">Data tidak boleh kosong</string>
</resources>