<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.others.SettingFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/siv_app_logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="100dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="100dp"
            android:src="@drawable/logo_app_bg_remove" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/siv_app_logo"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:textSize="30sp"
            tools:text="USERNAME" />

        <RelativeLayout
            android:id="@+id/switch_language_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_below="@+id/tv_username"
            android:layout_marginHorizontal="16dp">

            <TextView
                android:id="@+id/tv_language_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/poppins_medium"
                android:textSize="14sp"
                tools:text="@string/language_setting" />

            <TextView
                android:id="@+id/tv_EN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/switch_language"
                android:fontFamily="@font/poppins_regular"
                android:letterSpacing="0.02"
                tools:text="@string/en"
                android:textSize="14sp" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switch_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginHorizontal="20dp"
                android:layout_toStartOf="@id/tv_ID" />

            <TextView
                android:id="@+id/tv_ID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:fontFamily="@font/poppins_regular"
                android:letterSpacing="0.02"
                tools:text="@string/id"
                android:layout_marginEnd="20dp"
                android:textSize="14sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/switch_theme_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_below="@+id/switch_language_container"
            android:layout_marginHorizontal="16dp"
            tools:ignore="NotSibling">

            <TextView
                android:id="@+id/tv_theme_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/poppins_medium"
                android:textSize="14sp"
                tools:text="@string/theme_text" />

            <TextView
                android:id="@+id/tv_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/switch_theme"
                android:fontFamily="@font/poppins_regular"
                android:letterSpacing="0.02"
                android:textSize="14sp"
                tools:text="@string/light" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switch_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginHorizontal="20dp"
                android:layout_toStartOf="@id/tv_dark"
                android:checked="true" />

            <TextView
                android:id="@+id/tv_dark"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:fontFamily="@font/poppins_regular"
                android:letterSpacing="0.02"
                android:textSize="14sp"
                tools:text="@string/dark" />
        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_delete_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/error"
            tools:text="@string/delete_account_setting" />

    </RelativeLayout>

</FrameLayout>