<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.authentication.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar_register"
                style="@style/headline"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                app:title="@string/register_appbar_title"
                app:titleCentered="true"
                tools:ignore="MissingConstraints">

            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@+id/appbar_register" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            app:helperText="@string/example_email"
            app:helperTextEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_email_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                tools:hint="@string/email_edit_text_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            app:helperText="@string/minimum_character"
            app:helperTextEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_email_register"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_password_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                tools:hint="@string/password_edit_text_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="340dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_medium"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_password_register"
            tools:text="@string/register_btn_text" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider_1_register"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/tv_to_login"
            app:layout_constraintTop_toBottomOf="@+id/btn_register"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_to_login"
            android:layout_width="0dp"
            android:layout_height="17dp"
            android:layout_marginLeft="115dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="115dp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center_horizontal|center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_register"
            tools:text="@string/log_in_with" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider_2_register"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_to_login"
            app:layout_constraintEnd_toStartOf="@+id/tv_to_login"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_register"
            app:layout_constraintVertical_bias="0.216"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btn_to_login"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="340dp"
            android:layout_height="45dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center_horizontal|center_vertical"
            android:textAppearance="@style/another"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_to_login"
            tools:text="@string/btn_login_text" />

        <TextView
            android:id="@+id/syarat_ketentuan"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center_vertical|center_horizontal"
            android:lineHeight="16sp"
            android:lineSpacingExtra="-2sp"
            android:textColor="#49454F"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_to_login"
            app:layout_constraintVertical_bias="0.165"
            tools:text="@string/term_condition_register" />
    </androidx.constraintlayout.widget.ConstraintLayout>

<!--    <View-->
<!--        android:id="@+id/loading_overlay"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:background="#80000000"-->
<!--        android:visibility="gone" />-->

<!--    <com.airbnb.lottie.LottieAnimationView-->
<!--        android:id="@+id/lottie_loading"-->
<!--        android:layout_width="100dp"-->
<!--        android:layout_height="100dp"-->
<!--        android:layout_gravity="center"-->
<!--        android:visibility="gone"-->
<!--        app:lottie_autoPlay="true"-->
<!--        app:lottie_loop="true"-->
<!--        app:lottie_rawRes="@raw/loading_animation" />-->

</FrameLayout>